--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,43 @@
-# Compiled class file
-*.class
+# Eclipse
+.classpath
+.project
+.settings/
 
-# Log file
-*.log
+# Intellij
+.idea/
+*.iml
+*.iws
 
-# BlueJ files
-*.ctxt
+# vscode
+.vscode/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Mac
+.DS_Store
 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Maven
+log/
+target/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# compiled output
+static/
+tmp/
+db/
+
+# frontend test output
+coverage/
+
+# dependencies
+node_modules/
+
+
+# misc
+.sass-cache
+connect.lock
+coverage/*
+libpeerconnection.log
+npm-debug.log
+testem.log
+typings/
+yarn.lock
+
+
