--- a/CuriopediaServer/pom.xml
+++ b/CuriopediaServer/pom.xml
@@ -19,6 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <start-class>pl.com.curiopedia.CuriopediaApplication</start-class>
+        <postgresql.version>9.4-1203-jdbc42</postgresql.version>
         <querydsl.version>4.1.4</querydsl.version>
         <spock.version>1.1-groovy-2.4-rc-2</spock.version>
     </properties>
@@ -95,6 +96,21 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!--== DATABASE ==-->
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <!--== TEST ==-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
@@ -104,6 +120,8 @@
             <version>2.4.7</version>
             <scope>test</scope>
         </dependency>
+
+
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
@@ -122,11 +140,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
     </dependencies>
 
     <build>
