--- a/CuriopediaServer/src/main/resources/application.yml
+++ b/CuriopediaServer/src/main/resources/application.yml
@@ -16,14 +16,14 @@ app.jwt.secret: qwerty
 spring:
   profiles: dev
   datasource:
-    driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    url: jdbc:log4jdbc:h2:./db/dev;MODE=MySQL;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/curiopedia
+    username: postgres
+    password: postgres
   jpa:
-    database: H2
+    database: postgresql
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   thymeleaf:
     cache: false
 flyway:
