--- a/CuriopediaServer/src/main/resources/application.yml
+++ b/CuriopediaServer/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
     password: postgres
   jpa:
     database: postgresql
+    show-sql: true
     hibernate:
       ddl-auto: update
   thymeleaf:
